--- a/view/index.html
+++ b/view/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<script></script>
 	</head>
 	<body>
-		<canvas id="canvas_main"></canvas>
+		<canvas id="canvas_main" onmousemove="pointerevent"></canvas>
 		<div id="wrap">
 			<div id="content">
 				<div id="tabgroup">
