--- a/view/index.html
+++ b/view/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta http-equiv="X-UA-Compatible" content="ie=edge">
+		<title>Document</title>
 		<script></script>
 	</head>
 	<body>
@@ -17,15 +21,12 @@
 					<div id="basic">
 						<label for="host">Host</label>
 						<input type="text" name="host"><br>
-
 						<label for="host">Port</label>
 						<input type="text" name="ip"><br>
 					</div>
 					<div id="advanced">
 						<label for="share_desktop">Share Desktop</label>
 						<input type="checkbox" name="share_desktop"><br/>
-
-
 					</div>
 					<input type="submit">
 				</form>
