--- a/views/index.html
+++ b/views/index.html
@@ -4,12 +4,13 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-		<title>Document</title>
-		<script></script>
+		<link type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css"/>
+		<link type="text/css" href="/public/css/index.css"/>
+		<script async src="/public/js/index.js"></script>
 	</head>
 	<body>
-		<canvas id="canvas_main" onmousemove="pointerevent"></canvas>
 		<div id="wrap">
+			<canvas id="canvas_main" onmousemove="pointerevent"></canvas>
 			<div id="content">
 				<div id="tabgroup">
 					<ul>
