--- a/views/index.html
+++ b/views/index.html
@@ -4,9 +4,9 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-		<link type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css"/>
-		<link type="text/css" href="/public/css/index.css"/>
-		<script async src="/public/js/index.js"></script>
+		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css"/>
+		<link rel="stylesheet" type="text/css" href="/css/index.css"/>
+		<script async src="/js/index.js"></script>
 	</head>
 	<body>
 		<div id="wrap">
