--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,13 +1,87 @@
 #wrap {
 	width: 100%;
 	height: 100vh;
+	display: table;
+}
+
+#center {
+	display: table-cell;
+	vertical-align: middle;
+	text-align: center;
 }
 
 #content {
+	width: 500px;
+	height: 300px;
 	margin: auto;
-	width: 20%;
+	border: 1px solid black;
+	border-radius: 15px;
+}
+
+#tabgroup {
+	width: 500px;
+	height: 30px;
+}
+
+#tabgroup ul {
+	margin: 0;
+	padding: 0;
+	height: 30px;
+	border-bottom: 1px solid black;
+}
+
+#tabgroup li {
+	height: 30px;
+	list-style: none;
+	float: left;
+	line-height: 30px;
+	vertical-align: middle;
+	text-align: center;
+	border-right: 1px solid black;
+}
+
+.navlink {
+	width: 100px;
+	display: block;
+	color: black;
+	text-decoration: none;
+}
+
+#basic {
+	clear: both;
+}
+
+#basic label {
+	width: 65px;
+	display: inline-block;
+}
+
+#basic input {
+	width: 171px;
+}
+
+#basic select {
+	width: 175px;
+}
+
+#advanced {
+	text-align: left;
+	padding: 0 1em;
+}
+
+.title {
+	margin: 0;
+	padding: 1em 0;
+}
+.hidden {
+	display: none;
 }
 
 #canvas_main {
 	display: none;
+}
+
+.tab {
+	height: 225px;
+	box-sizing: border-box;
 }
